# YouPlumber

./: .gitignore  README.md  agents.md  prompt.txt  pyproject.toml  requirements.txt
docs/: app.js  index.html  style.css
utube/: __init__.py  __main__.py  audio.py  cli.py  config.py  db.py  downloader.py  finalize.py
utube/web/: server.py
utube/web/templates/: index.html
youplumber/: __main__.py  audio.py  cli.py  config.py  db.py  downloader.py  sources.py
youplumber/web/: server.py
youplumber/web/static/: app.js  style.css
youplumber/web/templates/: index.html
