[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utube"
version = "0.1.0"
description = "Fast, mass YouTube audio acquisition for DJs"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "mutagen>=1.47.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
]

[project.scripts]
utube = "utube.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utube*"]
