[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youplumber"
version = "0.1.0"
description = "Fast, mass YouTube audio acquisition for DJs"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "mutagen>=1.47.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "tomli-w>=1.0.0",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.scripts]
yp = "youplumber.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["youplumber*"]
